# Sentiment_Analyser

./: .gitignore  README.md  pyproject.toml  requirements.txt
artifacts/metrics/: classification_report.json  confusion_matrix.json  evaluation.json
artifacts/models/: logistic_regression.pkl
artifacts/vectorizers/: tfidf.pkl
config/: config.ini
src/: __init__.py  main.py
src/evaluation/: evaluate.py
src/prediction/: predict.py
src/preprocessing/: clean_review.py  prepare_dataset.py  traditional.py  transformer.py
src/traditional/: predict.py  process.py  split.py  train.py
src/training/: splitter.py
src/transformer/: process.py
src/utils/: configuration.py  file_csv.py  logger.py  sentiment.py
